# engine-study

./: .gitignore  52周引擎岗学习路线.md  CMakeLists.txt  README.md
docs/notes/: architecture.md
docs/notes/week1/: day1-2.md  day3.md  day4.md  day5.md  day6.md  week1.md
docs/notes/week1/cmake-4.2.0-tutorial-source/Step1/: CMakeLists.txt
docs/notes/week1/cmake-4.2.0-tutorial-source/Step1/MathFunctions/: CMakeLists.txt
docs/notes/week1/cmake-4.2.0-tutorial-source/Step1/Tutorial/: CMakeLists.txt  Tutorial.cxx
docs/notes/week2/: day1.md  day2.md  day3.md  day4.md  week2.md
engine_core/: CMakeLists.txt
engine_core/include/core/: Assert.h  FileHandle.hpp  Logger.h  MemoryBuffer.hpp
engine_core/src/: Assert.cpp  Logger.cpp
tests/: CMakeLists.txt
tests/src/: Trace.cpp  benchmarks.cpp  main.cpp  unit_tests.cpp
第一周/: 第一周.md
